# cget

./: CMakeLists.txt  README.md
libs/curl/include/curl/: curl.h
src/: cget.c  cget.h
